# HyperSpace

./: .env.example  .gitignore  .mcp.json  AGENT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MULTI_AGENT.md  README.md  REASONIX.md  Reasonix-2B-体系完整导出-20260602.md  add-claude-rightclick.reg  add-firewall-rule.bat  bridge-to-2b.md  chatroom-ui.html  check_health.py  github上面新建1个私人仓库，命名KID-Reasonix202606020008，然后本工作区推上去，所有记忆、配….md  install-mcp.bat  install-startup.vbs  install.ps1  opencode.json  pyproject.toml  qwen3.5-copilot.Modelfile  reasonix-voice.bat  reasonix.toml  remove-claude-rightclick.reg  setup.bat  start-ollama-proxy.bat  start-serve.vbs  sync.bat  tts-start.vbs  tts-startup.vbs  tts.bat  办公室-同步说明.md  截图监控.bat  截图监控.vbs
.claude/status/: bridge_watcher.json
.codegraph/: daemon.pid
.codex/: config.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: tests.yml
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json  memory-sync-verification.md  permissions.yaml  tts_last.txt
2B_chip/soul/: memories.md
HyperSpace/: .env.example  .gitignore  .mcp.json.example  CONTRIBUTING.md  README.md  pyproject.toml
HyperSpace/.github/: pull_request_template.md
HyperSpace/.github/ISSUE_TEMPLATE/: bug_report.md
HyperSpace/docs/: architecture.md
HyperSpace/hyperspace/: __init__.py  config.py  cost.py  executor.py  router.py  server.py  summary.py
HyperSpace/hyperspace/experimental/: README.md  __init__.py  session.py  web_vision.py
HyperSpace/hyperspace/hybrid_engine/: deepseek_web_client.py  health_checker.py  task_analyzer.py  web_auth.py
HyperSpace/hyperspace/providers/: __init__.py
HyperSpace/tests/: test_context_window_manager.py
assets/: greetings.json
backup/: config-manifest.json  fix-registry-final.reg  fix-registry-now.reg  reasonix-old-contextmenu.reg  reasonix-registry-correct.reg
backup/snapshot-20260607_090509/: windows-terminal-settings.json
backup/snapshot-20260607_090520/: reasonix-config.json  (+1 more)
bridge/: README.md
config/: hybrid_config.yaml  model_providers.template.json  providers.yaml  proxy_config.yaml  routing.yaml
docs/: hyperspace-v2-full-export-20260621.md  hyperspace-web-mode.md
hyperspace/: __init__.py  cli.py  config.py  cost.py  extract_auth.py  info.py  proxy_server.py  server.py  tiers.py
reference-参考/: AGENT_ref.md  Agent-Protocol-v0.1-20260609.md  Agent-template-for-ZCode.md  DeepSeek蓝鲸反向提示词.md  GitHub_Top_Projects_Guide.md  Hyperspace 混合推理引擎 — 实施方案 v2.0.md  LobeHub.md  Reasonix Cognitive Architecture Guide v3.0.md  Reasonix成长指南-从优秀到卓越.md  Token经济全方案导出-办公室部署指南.md  Understand Anything.md  evolve v2.1 技能定义.md  karpathy-anti-patterns.md  memory-transfer-to-claudecode-20260606.md  opencode cli安装2026年6月4日20点44分.md  tts-experience-for-claude-code.md  体系导出-2B-Reasonix-20260604.md  场景速查.md  存档202606051948.md  工具编排速查.md  未命名.md  桌面级多软件协同自动化控制系统 — Agent 原生工具链实施文档 v5.0.md
scripts/: backup-snapshot.ps1  check-auth.py  check-download.sh  check-integrity.ps1  deepseek_proxy.py  find-github-ip.sh  find-obj-ip.sh  fix-all-github-hosts.sh  fix-github-dns.sh  fix-wsl-dns.sh  fix-wsl-net.sh  hardcode-github-ip.sh  install-all.sh  install-opencode-wsl.sh  launch-reasonix.ps1  lit_review_yanshi.py  reasonix-quick-menu.ahk  reasonix-rightclick.bat  restore-snapshot.ps1  serve.sh  start-opencode-server.sh  start-opencode.bat  start-reasonix-menu.ps1  start-reasonix.ps1  start-server.sh  start-web.sh  switch-codex-model.bat  test-gh.sh  test-github-ip.sh  uninstall-opencode.bat  uninstall-reasonix-menu.ps1  verify_doc.py
scripts/lib/: asr.py  (+56 more)
tests/: test_context_window_manager.py  test_deepseek_web_client.py  test_health_checker.py  test_hybrid_engine.py  test_openai_compatible_adapter.py  test_placeholder_providers.py  test_provider_contract.py  test_provider_registry.py
(+137 files in other folders)
