[project]
name = "hyperspace"
version = "2.1.0"
description = "HyperSpace — 免费推理 CLI，深度接入 DeepSeek Web (¥0) / Qwen / SiliconFlow 等大模型，智能路由降级"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "freerunningkid" }]
keywords = ["mcp", "deepseek", "llm", "ai-agent", "router", "free", "zhipu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.2.0",
    "openai>=1.50.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "wasmtime>=24.0.0",
]

[project.scripts]
hyperspace = "hyperspace.cli:main"

[project.urls]
Homepage = "https://github.com/freerunningkid/HyperSpace"
Repository = "https://github.com/freerunningkid/HyperSpace"
Issues = "https://github.com/freerunningkid/HyperSpace/issues"

[project.optional-dependencies]
experimental = [
    "playwright>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hyperspace"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
