[project]
name = "hyperspace"
version = "0.1.0"
description = "HyperSpace — 让本地 Agent 优先调用免费/廉价云端大模型 API 的合法 MCP 路由器"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "freerunningkid" }]
dependencies = [
    "mcp>=1.2.0",
    "openai>=1.50.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
experimental = [
    # 仅 experimental/web_probe.py 用;不进入主依赖链
    "playwright>=1.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hyperspace"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
